[package]
name = "rosette"
version = "0.1.1"
authors = ["Thomas Alcala Schneider <thomas.alcala@gmail.com>"]
edition = "2018"
description = "Translate a text file to any language."
license = "MIT"
repository = "https://github.com/ThomasMarcel/rosette.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json", "native-tls", "cookies"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
